2004-10-13  Michael Natterer  <mitch@gimp.org>

	* plug-ins/pagecurl/pagecurl.c: forgot to remove N_() from
	gimp_plugin_menu_register().

2004-10-13  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/preferences-dialog.c (prefs_dialog_new): added
	missing and resolved conflicting mnemonics.

2004-10-12  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/selection-round.scm: moved out of the
	"Modify" placeholder. Using placeholders from Script-Fu breaks
	i18n.  We will need to change menu registration for scripts but
	this will have to wait..

2004-10-12  Michael Natterer  <mitch@gimp.org>

	* plug-ins/*/*.c: all plug-ins except script-fu: removed the
	translation marks from the menu paths passed to
	gimp_plugin_menu_register(). All default menu branches used by
	included plug-ins are created and translated by the core now.

2004-10-12  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage.[ch]: renamed struct member "unit" to
	"resolution_unit".

	* app/actions/image-commands.c
	* app/core/gimp-edit.c
	* app/core/gimpimage-duplicate.c
	* app/core/gimpimage-undo-push.c
	* app/dialogs/info-window.c
	* app/vectors/gimpvectors-export.c
	* app/widgets/gimptoolbox-dnd.c:
	* app/xcf/xcf-load.c
	* app/xcf/xcf-save.c: changed accordingly. Use gimp_image_get_unit()
	where appropriate.

	* app/core/gimptemplate.c (gimp_template_set_from_image): fixed
	unit handling. Don't touch the template unit, it is used as the
	initial display unit. This will need further changes...

2004-10-12  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpwidgets-utils.c (gimp_enum_radio_frame_add):
	need to pack the widget expanding. Fixes pattern container
	entries.

2004-10-12  Sven Neumann  <sven@gimp.org>

	* app/dialogs/info-window.[ch]: fixed unit handling. Right-align
	the labels displaying the cursor position. Renamed the "Extended"
	tab to "Cursor". Renamed the API accordingly.

	* app/display/gimpdisplayshell-cursor.c: changed accordingly.
