@@ -1,3 +1,13 @@
+2004-10-13  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimpimagefile.c (gimp_imagefile_create_thumbnail): ref
+	the imagefile while creating the thumbnail.
+
+	* app/core/gimpimagefile.[ch]
+	* app/widgets/gimpthumbbox.c (gimp_thumb_box_auto_thumbnail): moved
+	the tricky part about thumbnail creation into the new function
+	gimp_imagefile_create_thumbnail_weak().
+
 2004-10-13  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/pagecurl/pagecurl.c: forgot to remove N_() from
